exports[`Button React component Renders Default correctly 1`] = `
<button
  className="button default"
  disabled={false}
  onClick={[Function onClick]}
  type="button">
  Title
</button>
`;

exports[`Button React component Renders Disabled correctly 1`] = `
<button
  className="button default disabled"
  disabled={true}
  onClick={[Function onClick]}
  type="button">
  Title
</button>
`;

exports[`Button React component Renders Theme:Light correctly 1`] = `
<button
  className="button light"
  disabled={false}
  onClick={[Function onClick]}
  type="button">
  Title
</button>
`;

exports[`Button React component Renders Theme:Primary correctly 1`] = `
<button
  className="button primary"
  disabled={false}
  onClick={[Function onClick]}
  type="button">
  Title
</button>
`;

exports[`Button React component Renders Theme:Short correctly 1`] = `
<button
  className="button short"
  disabled={false}
  onClick={[Function onClick]}
  type="button">
  Title
</button>
`;

exports[`Button React component Renders Type:Submit correctly 1`] = `
<button
  className="button default"
  disabled={false}
  onClick={[Function onClick]}
  type="submit">
  Title
</button>
`;
